Fix alignment for headline block inside media card see #96

--- a/assets/scss/theme/_headline.scss
+++ b/assets/scss/theme/_headline.scss
@@ -11,6 +11,11 @@
     &.has-text-align-right {
         align-items: flex-end;
     }
+
+    &[class*="has-text-align"]{
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 .c-headline__word {
