--- a/editor.css
+++ b/editor.css
@@ -532,6 +532,9 @@
     align-items: flex-start; }
   .editor-styles-wrapper .c-headline.has-text-align-right {
     align-items: flex-end; }
+  .editor-styles-wrapper .c-headline[class*="has-text-align"] {
+    margin-left: 0;
+    margin-right: 0; }
 
 .editor-styles-wrapper .c-headline__word {
   display: inline-flex !important; }
