--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3239,6 +3239,9 @@ body.archive, body.blog, body.search:not(.search-no-results) {
     align-items: flex-start; }
   .c-headline.has-text-align-right {
     align-items: flex-end; }
+  .c-headline[class*="has-text-align"] {
+    margin-right: 0;
+    margin-left: 0; }
 
 .c-headline__word {
   display: inline-flex !important; }
